# kwi

./: .gitignore  README.md  justfile  pyproject.toml
.github/agents/: copilot-instructions.md
.github/prompts/: kwi.workitems.prompt.md
.github/skills/kwi-workitems/: SKILL.md
.specify/: init-options.json
.specify/memory/: constitution.md
docs/: architecture.md  clarifications-needed.md  setup.md  specification.md  usage.md
kwi-ui/: eslint.config.js  justfile  package-lock.json  package.json  vitest.config.ts
kwi-ui/src-tauri/: Cargo.toml  tauri.conf.json
kwi-ui/src-tauri/capabilities/: default.json
kwi-ui/src-tauri/icons/: icon.icns
kwi-ui/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  (+1 more)
migrations/: 001_initial_schema.sql  002_archived_flag.sql
specs/: overview.md  supplemental-spec.md
specs/001-kwi-db-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-kwi-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-kwi-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-kwi-ui-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-backlog-cleanup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/planning/: 005-backlog-cleanup-preplan.md
src/kwi/: __init__.py  db.py  main.py  models.py  output.py  queries.py
tests/: conftest.py  test_areas.py  test_cli.py  test_db.py  test_mcp.py  test_migration.py  test_output.py  test_projects.py  test_related.py  test_work.py
(+35 files in other folders)
